fix: unwrap text button

--- a/style.css
+++ b/style.css
@@ -168,8 +168,18 @@ h2 {
 }
 
 .arrowOpen {
-  width: 10px;
+  width: 30px;
+  margin-left: 90%;
+  transition: transform  .5s;
+  background-color: rgba(49, 49, 49, 0.1);
+  padding: 5px;
+  border-radius: 360px;
 }
+
+.arrowOpen:hover{
+  transform: scale(1.3);
+}
+
 
 /* ----------------------------------- */
 
@@ -418,9 +428,14 @@ button{
     margin-right: auto;
   }
 
-     #projects {
-       margin-left: 18%;
-     }
+  #projects {
+    margin-left: 18%;
+  }
+
+  .arrowOpen{
+    width: 30px;
+    margin: 0;
+  }
 } 
 
 @media screen and (max-width: 388px) {
